--- a/example-consumer-war/pom.xml
+++ b/example-consumer-war/pom.xml
@@ -53,6 +53,12 @@
       <version>1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.glassfish.hk2.external</groupId>
+      <artifactId>asm-all-repackaged</artifactId>
+      <version>2.5.0-b32</version>
+    </dependency>
+
     <!-- Test Dependencies -->
     <dependency>
       <groupId>junit</groupId>
@@ -67,9 +73,14 @@
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
     <plugins>
       <plugin>
+        <!--
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
         <version>${appengine.maven.plugin.version}</version>
+        -->
+        <groupId>com.google.appengine</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.9.57</version>
       </plugin>
     </plugins>
   </build>
